# meme-searcher

./: .env.example  .gitignore  AGENTS.md  AGENTS_CONVERSATION.MD  AGENT_COMMUNICATION_RULES.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  deep-research-report (14).md  docker-compose.yml  download-models.ps1  pyproject.toml  skills-lock.json  temp_queries_memes.yaml  test_small.py
docs/: AGENT_PROMPT_LABELING_INSTRUCTIONS.md  CODEX_PROMPTS_PHASE0.md  FINAL_PLAN.md  MEME_RETRIEVAL_V2_RESEARCH_PLAN.md  MODEL_GATEWAY.md  MODEL_SOURCES.md  PHASE0_MEME_SEARCHER.md  PHASE_0_PLAN.md  PHASE_0_REMAINING_PLAN.md  PHASE_0_REMAINING_TODO.md  PHASE_0_RETRIEVAL_PLAN.md  PHASE_0_TODO.md  PHASE_1_PLAN.md  PHASE_1_TODO.md  PHASE_2_PLAN.md  PHASE_2_TODO.md  PHASE_3_PLAN.md  PHASE_3_TODO.md  PHASE_4_PLAN.md  PHASE_4_TODO.md  PHASE_5_PLAN.md  PHASE_5_TODO.md  RLHF_FEEDBACK_LOOP_PLAN.md  RLHF_TRUE_TRAIN_TEST_PLAN.md  TODO.md  decision_log.md  eval_protocol.md  owui_integration.md  phase1_short_clips_transition.md  runbook.md
scripts/: rlhf_agent_loop.ps1  rlhf_target_benchmark.ps1
tests/: test_ai_judge_schema.py  test_api.py  test_caption.py  test_config.py  test_consensus_rules.py  test_contracts.py  test_eval_runner.py  test_feedback_ranker.py  test_feedback_tokens.py  test_fingerprints.py  test_ids.py  test_image_utils.py  test_ingest_preserve.py  test_integration_e2e.py  test_intent.py  test_judge_position_permutation.py  test_lambdamart_training_contract.py  test_logging_utils.py  test_meme_search_pipe.py  test_metrics.py  test_ocr_gateway.py  test_ocr_normalize.py  (+13 more)
(+77 files in other folders)
